Modernize the plugin
Modernizes the plugin to the most recent LTS and plugin parent version. Applies spotless and modernized using upgrade to Java 17 from OpenRewrite.